# nusolve

./: .gitignore  AUTHORS  ChangeLog  INSTALL.local  Makefile.am  NEWS  README  README.txt  TODO  configure.ac
data/: ECCDAT.ecc  glo.axis  glo.sit  glo.src  glo.ssm  glo.vel  gsfc_dao_9095.mgr  jmg96.hf  last.erp
doc/: .gitignore  Makefile.am  libGPGeo.dox
docs/: antcal_specs-v2.txt  draft-v2-master-format-1.txt  elim_02_hlp.ps  get_calib.f  upwei_02_hlp.ps
docs/UserGuides/: .gitignore  Makefile  Makefile.am  log2antUserGuide.tex  nuSolveUserGuide.tex  vgosDbCalcUserGuide.tex  vgosDbMakeUserGuide.tex  vgosDbProcLogsUserGuide.tex
info/: Lcode_mapping_v2015May01.xlsx  Makefile.am  dbh.fmt  dbh.fmt.utf8  elim_05.hlp  eop-format.txt  format_rsc.txt  master-format.txt  ngs.fmt  pp_tro_sub.ps  sinex.fmt  sinex01_tropo.format  sinex_v2.ps  template.txt
info/phase/: final_phase.ps  nice.ps
info/vgosDb/: vgosDB_flow.docx
scripts/: .gitignore  autoINT-2021-06-22.js  autoINT-2023-06-16.js  autoINT.SAVED-220328.js  autoINT.SAVED-230403.js  autoINT.js  export2ngs.js  getSnrStat  pia4INT.js  snrStat.js  vgosDx.js  vgosDxConvertor  vgosDxConvertor.in
src/: .gitignore
src/SgLib/: .gitignore  CompileInfo.c  Makefile.am  Sg3dMatrix.cpp  Sg3dMatrix.h  Sg3dMatrixR.cpp  Sg3dMatrixR.h  Sg3dMatrixRdots.cpp  Sg3dMatrixRdots.h  Sg3dVector.cpp  Sg3dVector.h  SgAPrioriData.cpp  SgAPrioriData.h  SgArcStorage.cpp  SgArcStorage.h  SgAttribute.cpp  SgAttribute.h  SgBreakModel.cpp  SgBreakModel.h  SgConstants.cpp  SgConstants.h  SgCubicSpline.cpp  SgCubicSpline.h  SgDbhFormat.cpp  SgDbhFormat.h  SgDbhImage.cpp  SgDbhImage.h  SgEccDat.cpp  SgEccDat.h  SgEccRec.cpp  SgEccRec.h  SgEccSite.cpp  SgEccSite.h  SgEstimator.cpp  SgEstimator.h  SgExternalErpFile.cpp  SgExternalErpFile.h  SgExternalTrp.cpp  SgExternalTrp.h  SgExternalWeights.cpp  (+163 more)
src/log2ant/: .gitignore  Makefile.am  README  l2aVersion.cpp  log2ant.cpp  log2ant.h
src/log2ant_standalone/: INSTALL.local  Makefile.am  configure.ac  configure.scan  copyTheFiles
src/log2ant_standalone/src/SgLib/: Makefile.am
src/log2ant_standalone/src/log2ant/: Makefile.am
src/nuSolve/: .gitignore  Makefile.am  NsBrowseNotUsedObsDialog.cpp  NsBrowseNotUsedObsDialog.h  NsBrowseObservation.cpp  NsBrowseObservation.h  NsMainWindow.cpp  NsMainWindow.h  NsScrPrx4Logger.cpp  NsScrPrx4Logger.h  NsScrPrx4Observation.cpp  NsScrPrx4Observation.h  NsScrPrx4ParametersDescriptor.cpp  NsScrPrx4ParametersDescriptor.h  NsScrPrx4Session.cpp  NsScrPrx4Session.h  NsScrPrx4SessionHandler.cpp  NsScrPrx4SessionHandler.h  NsScrPrx4Setup.cpp  NsScrPrx4Setup.h  NsScrPrx4TaskConfig.cpp  NsScrPrx4TaskConfig.h  NsScrSupport.cpp  NsScrSupport.h  NsSessionEditDialog.cpp  NsSessionEditDialog.h  NsSessionHandler.cpp  NsSessionHandler.h  NsSessionNameDialog.cpp  NsSessionNameDialog.h  NsSetup.cpp  NsSetup.h  NsSetupDialog.cpp  NsSetupDialog.h  NsStartupWizard.cpp  NsStartupWizard.h  NsTestDialog.cpp  NsTestDialog.h  NsTestFour1Dialog.cpp  NsTestFour1Dialog.h  (+6 more)
src/vgosDbCalc/: .gitignore  Makefile.am  README  VcCalc2SessionIfc.cpp  VcCalc2SessionIfc.h  VcSetup.cpp  VcSetup.h  VcStartupWizard.cpp  VcStartupWizard.h  VcVersion.cpp  vgosDbCalc.cpp  vgosDbCalc.h  vgosDbCalcSupport.cpp  vgosDbCalc_resources.cpp
src/vgosDbMake/: .gitignore  Makefile.am  README  VmSetup.cpp  VmSetup.h  VmStartupWizard.cpp  VmStartupWizard.h  VmVersion.cpp  vgosDbMake.cpp  vgosDbMake.h  vgosDbMake_resources.cpp
src/vgosDbProcLogs/: .gitignore  Makefile.am  README  VpSetup.cpp  VpSetup.h  VpStartupWizard.cpp  VpStartupWizard.h  VpVersion.cpp  vgosDbProcLogs.cpp  vgosDbProcLogs.h  vgosDbProcLogs.qrc  vgosDbProcLogs_resources.cpp
tests/: .gitignore  10APR06XU_V004  10APR06XU_V004.dump  3dMatrixR_app  3dMatrixR_app.cpp  3dMatrixR_app.out  3dMatrixRdots_app  3dMatrixRdots_app.cpp  3dMatrixRdots_app.out  3dMatrix_app  3dMatrix_app.cpp  3dMatrix_app.ok  3dVector_app  3dVector_app.cpp  3dVector_app.ok  DBH_app  DBH_app.cpp  DBH_app.ok  DBH_dump  DBH_dump.cpp  DBH_extract  DBH_extract.cpp  FRN_dump  FRN_dump.cpp  GE.X.1.yaoofe  KOMB_dump  KOMB_dump.cpp  MJD_app  MJD_app.cpp  MJD_app.out  Makefile.am  Matrix_app  Matrix_app.cpp  Matrix_app.out  README  Test_Expected2BSkipped  Test_Expected2Fail  Test_Vector  Vector_app  Vector_app.cpp  (+9 more)
