##
##
##    This file is a part of nusolve software distribution. The distribution
##    provides such programs as vgosDbCalc, vgosDbProcLogs, nuSolve, and others.
##    They allow a user to process and analyze geodetic VLBI observations.
##    Copyright (C) 2010-2021 Sergei Bolotin.
##
##    This program is free software: you can redistribute it and/or modify
##    it under the terms of the GNU General Public License as published by
##    the Free Software Foundation, either version 3 of the License, or
##    (at your option) any later version.
##
##    This program is distributed in the hope that it will be useful,
##    but WITHOUT ANY WARRANTY; without even the implied warranty of
##    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
##    GNU General Public License for more details.
##
##    You should have received a copy of the GNU General Public License
##    along with this program.  If not, see <http://www.gnu.org/licenses/>.
##
##
##
##



SUBDIRS = src/SgLib src/log2ant


EXTRA_DIST      = BUGS ChangeLog INSTALL INSTALL.local NEWS README\
                  docs/UserGuides/log2antUserGuide.pdf
dist_doc_DATA   = docs/UserGuides/log2antUserGuide.pdf
ACLOCAL_AMFLAGS = -I m4
CLEANFILES      = -r *~ docs/UserGuides/log2antUserGuide.pdf docs/UserGuides/ docs/ src/log2ant/README
